tests/fixtures/invalid/list_sub_list.py
# Cannot subtract list from list
x: list[int] = [1, 2, 3] - [1]
